apps/zeroclaw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zeroclaw-svc
  namespace: zeroclaw
  annotations:
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.34"
    tailscale.com/expose: "true"
    tailscale.com/hostname: "zeroclaw"
spec:
  type: LoadBalancer
  selector:
    app: zeroclaw
  ports:
    - name: http
      protocol: TCP
      port: 42617
      targetPort: 42617
